# goose

./: .gitignore  .weather.yaml.swp  404.html  AD_HOC_AGENT_TESTING.md  AGENT_MANAGER_TESTING.md  AGENT_OVERHAUL_IMPLEMENTATION.md  AGENT_OVERHAUL_START.md  AGENT_PR_REVISIONS_1_NOTES.md  AGENT_REPORT.md  AGENT_SESSION_REPORT.md  AGENT_TESTING_COMPREHENSIVE.md  ANALYZE_TOOL_IMPLEMENTATION_PROMPT.md  ANALYZE_TOOL_REPORT.md  ARIP.md  BRANCH_NOTES.md  BUILDING_LINUX.md  COMPLETE_CONFIG_ANALYSIS.md  COMPREHENSIVE_CONFIG_ANALYSIS.md  CONDENSED_PROMPT.md  CONFIG_BRAINSTORM.md  CONFIG_MIGRATION_PLAN.md  CONFIG_REPORT.md  CONFIG_UNIFICATION_IMPLEMENTATION_PLAN.md  Cargo.toml  Cargo_test.toml  Cross.toml  DYNAMIC_TASK_REPORT.md  Dockerfile.goose-cli-builder  EFFECTIVENESS_IMPLEMENTATION_PLAN.md  FINAL_COMPREHENSIVE_CONFIG_REPORT.md  FINAL_CONFIG_REPORT.md  FINAL_UPDATED_CONFIG_REPORT.md  FOCUSED_CONFIG_REPORT.md  GOOSE.md  GOOSE_CI_REPORT.md  GOOSE_EFFECTIVENESS_IMPROVEMENT_REPORT.md  INTERACTIVE_SUBAGENT_DOCS.md  Justfile  LOCALHOST_NOTES.md  MCP_SAMPLING_UI_IMPLEMENTATION_PLAN.md  (+128 more)
.cargo/: config.toml
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: build-cli.yml  bundle-desktop-intel.yml  bundle-desktop-linux.yml  bundle-desktop-windows.yml  bundle-desktop.yml  canary.yml  ci.yml  goose-issue-fixer.yml  nightly.yml  pr-comment-bundle-intel.yml  pr-comment-bundle-linux.yml  pr-comment-bundle-windows.yml  pr-comment-bundle.yml  pr-live-test.yml  pr-smoke-test.yml  release-branches.yml  smoke-tests.yml  test-finder.yml  validate-recipe-pr.yml
.husky/: pre-commit
AGENT_NOTES/: agent_lifecycle.md  agent_structure.md  approval_bubbling_design.md  code_reduction_analysis.md  code_reuse_analysis.md  current_usage_patterns.md  execution_paths.md  pr_4311_analysis.md  unification_design.md
EFFECTIVENESS_NOTES/: aider_analysis.md  cline_analysis.md  goose_architecture.md  implementation_strategy.md  swe_agent_analysis.md  terminal_bench_analysis.md
blog/: atom.xml  index.html  rss.xml
cat/: analysis.md
clients/python/: README.md  pyproject.toml
clients/python/examples/: tool_confirmation.py
clients/python/goose_client/: __init__.py  client.py  core.py  streaming.py
clients/python/goose_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
clients/python/goose_client/_generated/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
clients/python/goose_client/_generated/.github/workflows/: python.yml
clients/python/goose_client/_generated/.openapi-generator/: FILES
clients/python/goose_client/_generated/_generated/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
clients/python/goose_client/_generated/_generated/api/: __init__.py  context_management_api.py  recipe_management_api.py  schedule_api.py  session_management_api.py  super_routes_agent_api.py  super_routes_config_management_api.py  super_routes_health_api.py  super_routes_reply_api.py  super_routes_setup_api.py
clients/python/goose_client/_generated/_generated/models/: __init__.py  add_sub_recipes_request.py  add_sub_recipes_response.py  annotations.py  author_request.py  chat_request.py  config_key_query.py  config_response.py  content.py  context_manage_request.py  context_manage_response.py  create_recipe_request.py  create_recipe_response.py  create_schedule_request.py  decode_recipe_response.py  embedded_resource.py  embedded_resource_annotations.py  encode_recipe_request.py  error_response.py  extend_prompt_response.py  extension_config.py  extension_config_one_of.py  extension_config_one_of1.py  extension_config_one_of2.py  extension_config_one_of3.py  extension_config_one_of4.py  extension_config_one_of5.py  extension_config_one_of6.py  extension_entry.py  extension_query.py  extension_response.py  get_tools_query.py  icon.py  image_content.py  inspect_job_response.py  kill_job_response.py  list_recipe_response.py  list_schedules_response.py  message.py  message_content.py  (+46 more)
clients/python/goose_client/extensions/: __init__.py  base.py  retry.py  session_manager.py
clients/python/tests/: test_integration.py
clippy-baselines/: too_many_lines.txt
community/: index.html
crates/: GOOSE.md
crates/bitmortar/: Cargo.toml  DESIGN.md  README.md  bitmortar.toml.example  test_bitmortar.sh
crates/bitmortar/src/: config.rs  error.rs  main.rs  server.rs  types.rs
crates/bitmortar/src/providers/: mod.rs
deeplink-generator/: index.html
docs/: config-implementation.md  config-redesign-proposal.md  config2-design.md
documentation/: AGENTS.md  LINUX_DESKTOP_BUILDS.md  REFACTORING_SUMMARY.md  docusaurus.config.ts
extension/: index.html
extensions/: index.html
grants/: index.html
markdown-page/: index.html
prompt-library/: index.html
recipe-generator/: index.html
recipes/: index.html
scripts/: convert_toolcall.sh
subrecipes-mcp/: .gitignore  README.md  main.py  pyproject.toml
test_subagent/: Cargo.toml
tiny-agent/: client-tool.sh  server.sh
(+139879 files in other folders)
